Python Mode News
================

New in version 6.0.11
---------------------

- customizable history variables/files
  py-python-history defaults to "~/.python_history"
  py-ipython-history defaults to "~/.ipython/history"

  If py-honor-PYTHONHISTORY-p is `t', $PYTHONHISTORY takes precedence, default is nil
  If py-honor-IPYTHONDIR-p is `t', $IPYTHONHISTORY precedes, default is nil

- customizable boolean `py-trailing-whitespace-smart-delete-p'
  Default is nil. Some commands may delete trailing
  whitespaces by the way. When editing other peoples
  code, this may produce a larger diff than expected 

New in version 6.0.9
--------------------

- autopair-mode delivered
  Credits to Joao Tavora http://autopair.googlecode.com
  see README-AUTOPAIR.org for details

- Syntax highlighting in Python-shell buffers enabled
  boolean `py-fontify-shell-buffer-p', default is nil

- py-add-abbrev, new command
  Similar to `add-mode-abbrev', but uses
  `py-partial-expression' before point for expansion to
  store, not `word'. Also provides a proposal for new
  abbrevs.

  Proposal for an abbrev is composed from the downcased
  initials of expansion - provided they are of char-class
  [:alpha:]

  For example code below would be recognised as a
  `py-expression' composed by three
  py-partial-expressions.

  OrderedDict.popitem(last=True)

  Putting the curser at the EOL, M-3 M-x py-add-abbrev

  would prompt "op" for an abbrev to store, as first
  `py-partial-expression' beginns with a "(", which is
  not taken as proposal.

- py-edit-abbrevs
  Jumps to `python-mode-abbrev-table' 

- modeline enhanced
  when a path/to/my/favoured/Python is given with `py-shell-name'
  the Python-shell buffer before would display

  *ND path/to/my/favoured/Python* 

  now:

  *ptmfP Python*

  boolean `py-modeline-display-full-path-p' 
  boolean `py-modeline-acronym-display-home-p'  
  If the modeline acronym should contain chars indicating the home-directory.
